doc: appointment routes
